--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
     <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assests/css/style.css">
+    <script src="assests/js/lib/jquery-3.4.1.min.js"> </script>
     </head>
     <body>
        <h1>To Do List</h1>
