--- a/index.html
+++ b/index.html
@@ -1,9 +1,23 @@
 <!DOCTYPE html>
     <head>
-    <link rel="stylesheet" href="assests/css/style.css">
-    <script src="assests/js/lib/jquery-3.4.1.min.js"> </script>
+    <link rel="stylesheet" href="assests/css/todos.css">
+    <script type="text/javascript" src="assests/js/lib/jquery-3.4.1.min.js"> </script>
     </head>
     <body>
-       <h1>To Do List</h1>
+    
+    <div id="container">
+        <h1>To-Do List</h1> 
+        <input type="text">
+
+        <ul>
+            <li><span>X</span> a Sega Dreamcast</li> 
+            <li><span>X</span> Comic Con </li>
+            <li><span>X</span> God of War </li>
+        </ul>
+
+    </div>
+
+
+       <script type="text/javascript" src="assests/js/todos.js"></script>
     </body>
 </html>
