--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
     <head>
-    <link rel="stylesheet" href="assests/css/todos.css">
-    <script type="text/javascript" src="assests/js/lib/jquery-3.4.1.min.js"> </script>
+        <meta charset=”UTF-8”> 
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">   
+        <link rel="stylesheet" href="assests/css/todos.css">
+        <script type="text/javascript" src="assests/js/lib/jquery-3.4.1.min.js"> </script>
     </head>
     <body>
     
