--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <div id="container">
         <h1>To-Do List</h1> 
-        <input type="text">
+        <input type="text" placeholder="Add New Todo">
         <ul>
             <li><span>X</span> a Sega Dreamcast</li> 
             <li><span>X</span> Comic Con </li>
