--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
         <link rel="stylesheet" href="assests/css/todos.css">
         <script type="text/javascript" src="assests/js/lib/jquery-3.4.1.min.js"> </script>
         <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="./assests/font-awesome-4.7.0 2/css/font-awesome.css">
     </head>
     <body>
     
     <div id="container">
-        <h1>To-Do List</h1> 
+        <h1>To-Do List <i class="fa fa-pencil-square" aria-hidden="true"></i></h1> 
         <input type="text" placeholder="Add New Todo">
         <ul>
             <li><span>X</span> a Sega Dreamcast</li> 
