--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <h1>To-Do List <i class="fa fa-pencil-square" aria-hidden="true"></i></h1> 
         <input type="text" placeholder="Add New Todo">
         <ul>
-            <li><span>X</span> a Sega Dreamcast</li> 
-            <li><span>X</span> Comic Con </li>
-            <li><span>X</span> God of War </li>
+            <li><span><i class="fa fa-trash" aria-hidden="true"></i></span> a Sega Dreamcast</li> 
+            <li><span><i class="fa fa-trash" aria-hidden="true"></i></span> Comic Con </li>
+            <li><span><i class="fa fa-trash" aria-hidden="true"></i></span> God of War </li>
         </ul>
     </div>
 
