--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <input type="text" placeholder="Add New Todo">
         <ul>
             <li><span><i class="fa fa-trash" aria-hidden="true"></i></span> Buy a Sega Dreamcast</li> 
-            <li><span><i class="fa fa-trash" aria-hidden="true"></i></span> Buy Comic Con tickets </li>
+            <li><span><i class="fa fa-trash" aria-hidden="true"></i></span> Attend Comic Con </li>
             <li><span><i class="fa fa-trash" aria-hidden="true"></i></span> Beat God of War </li>
         </ul>
     </div>
