--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
             <li><span><i class="fa fa-trash" aria-hidden="true"></i></span> Beat God of War </li>
         </ul>
     </div>
-
-
+        <script src="https://kit.fontawesome.com/f4dae94291.js" crossorigin="anonymous"></script>
        <script type="text/javascript" src="assests/js/todos.js"></script>
     </body>
 </html>
